# pid-angulo

./: README.md
firmware/: CMakeLists.txt  control-angulo.c  picow-servo-pid.c
mechanical/: Stand motor pid con engranajes.3mf
